--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -118,11 +118,11 @@ button:hover {
     border: 5px solid #FFF;
     border-bottom-color: transparent;
     border-radius: 50%;
-    display: inline-block;
+    display: none;
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
-}
-
+    margin: 20px auto;
+    
 @keyframes rotation {
     0% {
         transform: rotate(0deg);
