--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -122,7 +122,7 @@ button:hover {
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
     margin: 20px auto;
-    
+}  
 @keyframes rotation {
     0% {
         transform: rotate(0deg);
